@@ -2,8 +2,8 @@ package com.c4_soft.springaddons.security.oauth2.config;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.Instant;
 import java.util.List;
 import java.util.Map;
@@ -16,35 +16,29 @@ import org.springframework.security.oauth2.jwt.JwtClaimNames;
 import com.c4_soft.springaddons.security.oauth2.OpenidClaimSet;
 import com.c4_soft.springaddons.security.oauth2.config.SpringAddonsSecurityProperties.Case;
 import com.c4_soft.springaddons.security.oauth2.config.SpringAddonsSecurityProperties.IssuerProperties;
-import com.nimbusds.jose.shaded.json.JSONArray;
-import com.nimbusds.jose.shaded.json.JSONObject;
 
 public class ConfigurableJwtGrantedAuthoritiesConverterTest {
 
 	@Test
-	public void test() throws MalformedURLException {
-		final var issuer = new URL("https://authorisation-server");
+	public void test() throws URISyntaxException {
+		final var issuer = new URI("https://authorisation-server");
 
-		final var client1Roles = new JSONArray();
-		client1Roles.addAll(List.of("R11", "R12"));
+		final var client1Roles = List.of("R11", "R12");
 
-		final var client2Roles = new JSONArray();
-		client2Roles.addAll(List.of("R21", "R22"));
+		final var client2Roles = List.of("R21", "R22");
 
-		final var client3Roles = new JSONArray();
-		client3Roles.addAll(List.of("R31", "R32"));
+		final var client3Roles = List.of("R31", "R32");
 
-		final var realmRoles = new JSONArray();
-		realmRoles.addAll(List.of("r1", "r2"));
+		final var realmRoles = List.of("r1", "r2");
 
 		// @formatter:off
-		final var claims = new JSONObject(Map.of(
+		final var claims = Map.of(
 				JwtClaimNames.ISS, issuer,
-				"resource_access", new JSONObject(Map.of(
-						"client1", new JSONObject(Map.of("roles", client1Roles)),
-						"client2", new JSONObject(Map.of("roles", client2Roles)),
-						"client3", new JSONObject(Map.of("roles", client3Roles)))),
-				"realm_access", new JSONObject(Map.of("roles", realmRoles))));
+				"resource_access", Map.of(
+						"client1", Map.of("roles", client1Roles),
+						"client2", Map.of("roles", client2Roles),
+						"client3", Map.of("roles", client3Roles)),
+				"realm_access", Map.of("roles", realmRoles));
 		// @formatter:on
 
 		final var now = Instant.now();
